index.css
:root[data-theme="light"] {
    --text: #120d11;
    --background: #fbf9fa;
    --primary: #ededed;
    --accent: #cccccc;
}
:root[data-theme="dark"] {
    --text: #f2edf1;
    --background: #060405;
    --primary: #131313;
    --accent: #323232;
}

html {
    scroll-behavior: smooth;
}

* {
    margin: 0;
    padding: 0;
}

.image {
    display: block;
    max-width: 100%;
}

body {
    min-height: 100vh;
    background-color: var(--background);
    background-size: cover;
    background-position: center;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    overflow-x: hidden;
    width: 100vw;
}

body::-webkit-scrollbar {
  display: none;
}

nav {
    background-color: var(--primary);
    box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
    position: sticky;
    top: 0;
    z-index: 9;
}

nav ul {
    width: 100%;
    list-style: none;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

nav li {
    height: 50px;
}

nav a {
    height: 100%;
    padding: 0 30px;
    text-decoration: none;
    display: flex;
    align-items: center;
    color: var(--text);
    transition: 0.3s;
}

nav a:hover {
    background-color: var(--accent);
    transition: 0.3s;
}

.sidebar {
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 999;
    background-color: var(--primary);
    backdrop-filter: blur(10px);
    box-shadow: -10px 0 10px rgba(0,0,0,0.1);
    display: none;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    transition: ease;
}

.sidebar li {
    width: 100%;
}

.sidebar a {
    width: 100%;
}

.material-symbols-outlined {
    font-variation-settings: 'FILL'0,'wght'400, ;
}

.menu-button {
    display: none;
}

#container1 {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 90vh;
    color: var(--text);
    min-width: 100vw;
    background-image: url("https://raw.githubusercontent.com/jur42282/website/master/banner.png");
    background-size: cover;
    background-position: center;
    margin-bottom: 0;
	flex-direction: column;
    text-align: center;
}

#midway-banner {
    min-width: 80vw;
    transition: ease-in-out 0.1s;
}

#midway-banner:hover {
    transform: scale(1.01);
    transition: ease-in-out 0.3s;
}

.bn53 {
    background-color: #f2edf1;
    padding: 7px;
    width: 200px;
    height: 50px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    animation: bn53bounce 4s infinite;
    cursor: pointer;
	position: relative;
	margin-top: 50px;
	color: #120d11;
    font-weight: bolder;
    transition: ease-in-out 0.3s;
}

.bn53:hover {
    background-color: #120d11;
    color: #f2edf1;
    transition: ease-in-out 0.3s;
}

@keyframes bn53bounce {
    5%,
    50% {
        transform: scale(1);
    }

    10% {
        transform: scale(1);
    }

    15% {
        transform: scale(1);
    }

    20% {
        transform: scale(1) rotate(-5deg);
    }

    25% {
        transform: scale(1) rotate(5deg);
    }

    30% {
        transform: scale(1) rotate(-3deg);
    }

    35% {
        transform: scale(1) rotate(2deg);
    }

    40% {
        transform: scale(1) rotate(0);
    }
}

#container2 {
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--text);
    padding: 3px;
    background-color: var(--primary);
    min-width: 100vw;
}

#container3 {
    margin-top: 20px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    color: var(--text);
    padding: 3px;
    background-color: var(--primary);
    min-width: 100vw;
    height: 480px;
}
#container3 h1 {
    margin: 20px;
    font-size: 2.5rem;
}

.mySwiper {
    width: 95%;
    height: 100%;
    margin: 20px;
    border: solid 0px;
    border-radius: 15px;
    }

.swiper-slide {
    font-size: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--accent);
    }

.swiper-content {
    padding: 20px;
}


.swiper-slide p {
    padding: 20px 45px;
    }

.swiper-slide h2 {
    font-size: 2rem;
    text-align: center;
    }

.swiper-slide img {
    display: block;
    width: 100%;
    height: 100%;
    object-fit: cover;
    }

.swiper {
    margin-left: auto;
    margin-right: auto;
    }

footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--primary);
    color: var(--text);
    margin-top: 10px;
    height: 50px;
    width: 100%;
    bottom: 0;
    box-shadow: 0 -3px 5px rgba(0,0,0,0.1);
}

.socials {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 10px;
    font-size: 20px;
    text-decoration: none;
}

.socials a {
    margin: 0 10px;
    cursor: pointer;
    transition: 0.3s;
    text-decoration: none;
    color: var(--text);
}

.socials a:hover {
    transform: scale(1.1);
    transition: 0.3s;
}

footer p {
    margin: 0 10px;
    text-align: center;
}

@media(max-width: 550px) {
    .sidebar {
        width: 100%;
    }

    .hideOnMobile {
        display: none;
    }

    .menu-button {
        display: block;
        transition: ease;
    }
}
.hidden {
    opacity: 0;
    transition: ease-in-out 1s;
}

.show {
    opacity: 1;
}

